// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has error 1`] = `
<label
  className="root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary Mui-error css-9npbnl-MuiFormLabel-root-MuiInputLabel-root"
/>
`;

exports[`is disabled 1`] = `
<label
  className="root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary Mui-disabled css-9npbnl-MuiFormLabel-root-MuiInputLabel-root"
/>
`;

exports[`renders correctly props object 1`] = `
<label
  className="root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary addClass css-9npbnl-MuiFormLabel-root-MuiInputLabel-root"
  htmlFor="textId"
>
  test text
</label>
`;
